# sol-dev

./: Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/parser/: consumption.rs  error.rs  function.rs  invoke.rs  log.rs  mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
