[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
name = "sol-dev"
version = "0.1.1"
edition = "2021"
authors = ["Ruben du Burck <rubenduburck@gmail.com>"]
repository = "https://github.com/rubenduburck/sol-dev"
description = "A collection of tools for developing Solana programs."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["solana", "sol-dev", "sol-dev-utils", "sol-dev-macros", "sol-dev-proc-macros", "sol-dev-cli"]
categories = ["development-tools"]


[workspace.dependencies]
sol-dev-proc-macros = { path = "crates/proc-macros" }
sol-dev-macros = { path = "crates/macros" }
sol-dev-utils = { path = "crates/utils" }
sol-dev-cli = { path = "crates/cli" }

borsh = "1.5.1"

