[package]
name = "sol-dev-cli"

version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Solana development cli"
keywords.workspace = true
categories.workspace = true

[dependencies]
regex = "1.10.6"
thiserror = "1.0.63"
tracing = "0.1.40"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
clap = { version = "4.5.16", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ansi_term = "0.12.1"
rayon = "1.10.0"
lazy_static = "1.5.0"

[dev-dependencies]
tracing-test = "0.2.5"
