[package]
name = "sol-dev-proc-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
sol-dev-utils = { workspace = true }
proc-macro2 = "1.0.86"
quote = "1.0.9"
syn = { version = "2.0.75", features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]

