[package]
name = "sol-dev-proc-macros"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Solana development proc macros"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
sol-dev-utils = { workspace = true }
proc-macro2 = "1.0.86"
quote = "1.0.9"
syn = { version = "2.0.75", features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]

