[package]
name = "sol-dev-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Solana development utils"
keywords.workspace = true
categories.workspace = true

[dependencies]
proc-macro2 = "1.0.86"
sha2 = { version = "0.10.8", features = ["std"] }

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]

